force-app/main/default/objects/Chat__c/fields/App__c.field-meta.xml
<CustomField>
    <fullName>App__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>App di riferimento della chat</description>
    <inlineHelpText>App di riferimento della chat</inlineHelpText>
    <label>App</label>
    <referenceTo>App__c</referenceTo>
    <relationshipLabel>Chat</relationshipLabel>
    <relationshipName>Chat</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>