force-app/main/default/objects/Chat__c/fields/Data_Ora_Eliminazione__c.field-meta.xml
<CustomField>
    <fullName>Data_Ora_Eliminazione__c</fullName>
    <description>Data e ora dell&apos;eliminazione della chat. Se impostata non è più possibile accedere alla chat</description>
    <inlineHelpText>Data e ora dell&apos;eliminazione della chat. Se impostata non è più possibile accedere alla chat</inlineHelpText>
    <label>Data Ora Eliminazione</label>
    <type>DateTime</type>
</CustomField>