force-app/main/default/objects/Chat__c/fields/Descrizione__c.field-meta.xml
<CustomField>
    <fullName>Descrizione__c</fullName>
    <description>Descrizione della chat</description>
    <inlineHelpText>Descrizione della chat</inlineHelpText>
    <label>Descrizione</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>