force-app/main/default/objects/Chat__c/fields/Riferimento_Immagine__c.field-meta.xml
<CustomField>
    <fullName>Riferimento_Immagine__c</fullName>
    <description>Riferimento firebase all&apos;immagine</description>
    <label>Riferimento Immagine</label>
    <length>255</length>
    <type>Text</type>
</CustomField>