force-app/main/default/objects/Chat__c/fields/Tipologia__c.field-meta.xml
<CustomField>
    <fullName>Tipologia__c</fullName>
    <description>Tipologia della chat, se gruppo o tra 2 persone</description>
    <inlineHelpText>Tipologia della chat, se gruppo o tra 2 persone</inlineHelpText>
    <label>Tipologia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>channel</fullName>
                <label>Canale</label>
            </value>
            <value>
                <fullName>direct</fullName>
                <default>true</default>
                <label>Doppia</label>
            </value>
            <value>
                <fullName>group</fullName>
                <label>Gruppo</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>