force-app/main/default/objects/Chat__c/fields/URL_Immagine__c.field-meta.xml
<CustomField>
    <fullName>URL_Immagine__c</fullName>
    <description>URL dell&apos;immagine della chat</description>
    <inlineHelpText>URL dell&apos;immagine della chat</inlineHelpText>
    <label>URL Immagine</label>
    <type>Url</type>
</CustomField>