force-app/main/default/objects/Chat__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>App__c</columns>
    <columns>Area__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Data_Ora_Chiusura__c</columns>
    <columns>Data_Ora_Eliminazione__c</columns>
    <columns>Nome__c</columns>
    <columns>Proprietario__c</columns>
    <columns>URL_Immagine__c</columns>
    <columns>Descrizione__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Tutto</label>
</ListView>